client/css/layout.css
/* ... */
body {
  background: #484848;
  padding: 0;
  margin: 0;
  overflow: hidden;
  font-family: 'Roboto', sans-serif;
}

#roomArea {
  position: fixed;
  overflow: hidden;
  width: calc(var(--roomWidth) * var(--scale));
  height: calc(var(--roomHeight) * var(--scale));
  top: var(--roomTop);
  left: var(--roomLeft);
  z-index: 1;
}

@media (min-aspect-ratio: 1600/1000) {
  body {
    --roomTop: 0px;
    --roomLeft: calc((100vw - var(--roomWidth) * var(--scale)) / 2 + var(--toolbarSize) / 2);
  }
}

body.aspectTooGood {
  --roomTop: calc((100vh - var(--scale) * var(--roomHeight)) / 2);
  --roomLeft: var(--toolbarSize);
}

body.aspectTooGood.hiddenToolbar {
  --roomLeft: calc((100vw - var(--scale) * var(--roomWidth)) / 2);
}


/* toolbar */


  /* main */

    #toolbar {
      display: flex;
      flex-direction: column;
      align-content: center;
      position: fixed;
      box-sizing: border-box;
      z-index: 2;

      top: 0;
      left: calc((100vw - var(--roomWidth) * var(--scale)) / 2 - var(--toolbarSize) / 2 + 1px);
      width: var(--toolbarSize);
      height: 100%;

      background: var(--VTTblue);
      padding: 20px 0 10px 0;
    }

    body.wideToolbar {
      --toolbarSize: 200px;
    }

    body.aspectTooGood #toolbar {
      top: calc((100vh - var(--scale) * var(--roomHeight)) / 2);
      height: calc(var(--scale) * var(--roomHeight));
    }

    body.horizontalToolbar #toolbar {
      flex-direction: row;

      top: calc((var(--vh, 1vh) * 100 - var(--roomHeight) * var(--scale)) / 2 + var(--roomHeight) * var(--scale) - var(--toolbarSize) / 2 - 1px);
      left: 0;
      width: 100%;
      height: var(--toolbarSize);

      padding: 0 10px 0 20px;
    }

    body.aspectTooGood.hiddenToolbar #toolbar {
      display: none;
    }

    @media (min-height: 440px) {
      body.wideToolbar #toolbar {
        background-image: url(i/branding/logo.svg);
        background-size: 160px;
        background-repeat: no-repeat;
        background-position: center 30px;
        padding-top: 84px;
      }
      body.wideToolbar #toolbar .divider:first-child {
        display: block;
        margin: 20px 10%;
      }
    }

  /* dividers */

    #toolbar .divider {
      border-top: 1px solid #fff8;
      margin: 10px 10%;
    }

    #toolbar .divider:first-child {
      display: none;
    }

    #toolbar .spacer {
      flex-grow: 1;
    }

    body.horizontalToolbar #toolbar .divider {
      border-left: 1px solid #fff8;
      height: 80%;
      margin: auto 10px;
    }

  /* buttons */

    .toolbarButton {
      display: flex;
      align-items: center;
      justify-content: center;
      margin: 2px;
    }

    .toolbarButton::before,
    .ui-button::before,
    .prettyButton::before,
    .prettyButton-icon,
    .symbols {
      font-family: 'VTT-Symbols' !important;

      letter-spacing: 0;
      font-feature-settings: "liga";
      font-variant-ligatures: discretionary-ligatures;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }

    .toolbarButton::before {
      font-size: 20px;
    }

    .toolbarButton:hover {
      background-color: rgba(0, 0, 0, 0.1);
    }

    .toolbarButton:focus {
      outline-style: none;
      box-shadow: none;
      border-color: transparent;
    }

    body.wideToolbar .toolbarButton {
      justify-content: left;
      padding-left: 10%;
    }

    body.horizontalToolbar .toolbarButton:not(.toolbarTab) {
      justify-content: right;
    }

  /* tabs */

    .toolbarTab {
      width: 90%;
      border-radius: 0 20px 20px 0;
      margin-left: 0;
      height: 40px;
    }

    .toolbarTab::before {
      font-size: 32px;
    }

    .toolbarTab.active {
      background-color: white;
      color: var(--VTTblue);
    }

    body.wideToolbar .toolbarTab::before {
      font-size: 24px;
    }

    body.horizontalToolbar .toolbarTab {
      border-radius: 20px 20px 0 0;
      margin: auto 2px 0 2px;
      max-width: 180px;
    }

  /* button tooltips */

    .toolbarButton .tooltip, #options {
      display: none;
      position: absolute;
      left: 46px;
      padding: 2px 12px;
      font-size: 14px;
      border-radius: 4px;
      white-space: nowrap;
      color: #fff;
      background: var(--VTTblue);
      box-shadow: 0 0 5px #0005;
    }

    .toolbarButton:hover .tooltip, body.wideToolbar .toolbarButton .tooltip {
      display: block;
    }

    body.wideToolbar .toolbarButton .tooltip, body.horizontalToolbar .toolbarTab .tooltip {
      box-shadow: unset;
      background: none;
    }

    body.wideToolbar .toolbarButton .tooltip {
      margin-left: -4px;
      font-size: 12px;
    }

    body.wideToolbar .toolbarTab .tooltip, body.horizontalToolbar .toolbarTab .tooltip {
      font-size: 20px;
    }

    body.wideToolbar .active.toolbarTab .tooltip, body.horizontalToolbar .active.toolbarTab .tooltip {
      color: var(--VTTblue);
    }

    body.horizontalToolbar .toolbarButton .tooltip {
      left: unset;
      bottom: 46px;
    }

    body.horizontalToolbar .toolbarTab .tooltip {
      display: block;
      position: static;
      padding-right: 0;
    }

  /* button specific styles */

    #activeGameButton::before {
      content: '[play_arrow]';
    }

    #statesButton::before {
      content: '[library]';
    }

    #playersButton::before {
      content: '[users_settings]';
    }

    #editButton::before {
      content: '[edit_mode]';
    }

    #addButton::before {
      content: '[widget_add]';
    }

    #optionsButton::before {
      content: '[volume_up]';
    }

    html:not(:fullscreen) #fullscreenButton::before {
      content: '[enter_fullscreen]';
    }

    html:fullscreen #fullscreenButton::before {
      content: '[exit_fullscreen]';
    }

    html:not(:fullscreen) #fullscreenButton .tooltip::before {
      content: '';
    }

    html:fullscreen #fullscreenButton .tooltip::before {
      content: 'Exit ';
    }
/* ... */

